--- a/angular.json
+++ b/angular.json
@@ -88,7 +88,11 @@
             "assets": [
               "src/favicon.ico",
               "src/assets"
-            ]
+            ],
+            "styles": [
+              "src/styles.css"
+            ],
+            "scripts": []
           }
         }
       }
