--- a/backend/EmailServer/src/main/resources/application.properties
+++ b/backend/EmailServer/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 # MySQL Configuration
 spring.datasource.url = jdbc:mysql://localhost:3306/EmailServerDatabase
 spring.datasource.username = root
-spring.datasource.password = GodaLetMeIn
+spring.datasource.password = mostaf+@+2020033
 spring.jpa.show-sql = true
 spring.jpa.hibernate.ddl-auto = create
 spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQL5Dialect
