--- a/backend/EmailServer/src/main/resources/application.properties
+++ b/backend/EmailServer/src/main/resources/application.properties
@@ -1,8 +1,11 @@
 # MySQL Configuration
-spring.datasource.url = jdbc:mysql://localhost:3306/EmailServerDatabase
+spring.datasource.url = jdbc:mysql://localhost:3306/EmailServerDatabase?useSSL=false
 spring.datasource.username = root
-spring.datasource.password = mostaf+@+2020033
+spring.datasource.password = GodaLetMeIn
 spring.jpa.show-sql = true
-spring.jpa.hibernate.ddl-auto = create
-spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQL5Dialect
+spring.jpa.hibernate.ddl-auto =  update
+spring.jpa.database-platform = org.hibernate.dialect.MySQL5Dialect
+spring.jpa.properties.hibernate.globally_quoted_identifiers=true
+spring.jpa.generate-ddl=true
 spring.jackson.serialization.FAIL_ON_EMPTY_BEANS=false
+spring.devtools.restart.enabled = false
