--- a/backend/EmailServer/src/main/resources/application.properties
+++ b/backend/EmailServer/src/main/resources/application.properties
@@ -9,3 +9,6 @@ spring.jpa.properties.hibernate.globally_quoted_identifiers=true
 spring.jpa.generate-ddl=true
 spring.jackson.serialization.FAIL_ON_EMPTY_BEANS=false
 spring.devtools.restart.enabled = false
+logging.level.root=WARN
+logging.level.org.springframework.web=DEBUG
+logging.level.org.hibernate=ERROR
