--- a/backend/EmailServer/src/main/resources/application.properties
+++ b/backend/EmailServer/src/main/resources/application.properties
@@ -3,7 +3,7 @@ spring.datasource.url = jdbc:mysql://localhost:3306/EmailServerDatabase?useSSL=f
 spring.datasource.username = root
 spring.datasource.password = 123456789
 spring.jpa.show-sql = true
-spring.jpa.hibernate.ddl-auto =  create
+spring.jpa.hibernate.ddl-auto =  update
 spring.jpa.database-platform = org.hibernate.dialect.MySQL5Dialect
 spring.jpa.properties.hibernate.globally_quoted_identifiers=true
 spring.jpa.generate-ddl=true
