--- a/frontend/package.json
+++ b/frontend/package.json
@@ -23,6 +23,7 @@
     "@zxcvbn-ts/language-en": "^2.1.0",
     "angular-dark-mode": "^3.0.3",
     "angular-password-strength-meter": "^5.0.1",
+    "axios": "^1.2.2",
     "ng-click-outside": "^9.0.1",
     "ngx-pagination": "^6.0.3",
     "rxjs": "~7.5.0",
