--- a/backend/EmailServer/src/main/resources/application.properties
+++ b/backend/EmailServer/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 # MySQL Configuration
 spring.datasource.url = jdbc:mysql://localhost:3306/EmailServerDatabase?useSSL=false
 spring.datasource.username = root
-spring.datasource.password = GodaLetMeIn
+spring.datasource.password = zby123
 spring.jpa.show-sql = true
 spring.jpa.hibernate.ddl-auto = update
 spring.jpa.database-platform = org.hibernate.dialect.MySQL5Dialect
