--- a/backend/EmailServer/src/main/resources/application.properties
+++ b/backend/EmailServer/src/main/resources/application.properties
@@ -1,7 +1,8 @@
 # MySQL Configuration
+spring.http.multipart.maxFileSize = 25 MB;
 spring.datasource.url = jdbc:mysql://localhost:3306/EmailServerDatabase?useSSL=false
 spring.datasource.username = root
-spring.datasource.password = 123456789
+spring.datasource.password = GodaLetMeIn
 spring.jpa.show-sql = true
 spring.jpa.hibernate.ddl-auto = update
 spring.jpa.database-platform = org.hibernate.dialect.MySQL5Dialect
